<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/add_event_sv"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/add_event_name_tv"
            android:layout_width="387dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="event name"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/event_name"
            android:inputType="text"
            android:textColorHint="@color/textGrey" />

        <EditText
            android:id="@+id/add_event_desc_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_description"
            android:inputType="text"
            android:textColorHint="@color/textGrey"
            android:layout_below="@id/add_event_name_tv"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:autofillHints="event description" />

        <EditText
            android:id="@+id/add_event_limit_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/attendee_limit"
            android:inputType="number"
            android:textColorHint="@color/textGrey"
            android:layout_below="@id/add_event_desc_et"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:autofillHints="attendee limit" />

        <LinearLayout
            android:id="@+id/add_event_geolocation_configure_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_below="@id/add_event_limit_et"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/geolocation_verification"
                android:layout_marginEnd="10dp"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/add_event_geolocation_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/add_event_choose_location_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_location"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/add_event_limit_et"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/add_event_geolocation_display_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/add_event_geolocation_configure_ll"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_marginEnd="5dp"
                />

            <TextView
                android:id="@+id/add_event_location_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_event_select_qr_code"
            android:hint="@string/qr_code_option"
            android:layout_below="@id/add_event_geolocation_display_ll"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/add_event_select_qr_code_actv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColorHint="#9C27B0" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_event_orphaned_qr_code_spinner"
            android:layout_below="@id/add_event_select_qr_code"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/add_event_share_promo_qr_code_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_below="@id/add_event_orphaned_qr_code_spinner"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/promotional_qr_code"
                android:layout_marginEnd="10dp"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/add_event_promo_code_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                />

        </LinearLayout>

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_image"
            android:id="@+id/add_event_choose_image_button"
            android:backgroundTint="@color/lightPink"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:layout_below="@id/add_event_share_promo_qr_code_ll"
            android:layout_marginBottom="10dp"
            app:itemRippleColor="@android:color/transparent"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_event_image_view"
            android:layout_below="@id/add_event_choose_image_button"
            android:contentDescription="@string/event_poster" />

        <DatePicker
            android:id="@+id/add_event_date_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_event_image_view"
            android:calendarViewShown="false"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:theme="@style/MyDatePickerStyle"
            />

        <Button
            android:id="@+id/add_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightPink"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:text="@string/add_event"
            android:layout_below="@id/add_event_date_dp"
            />
    </RelativeLayout>
</ScrollView>