<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">




    <!-- Three buttons below -->
    <LinearLayout
        android:id="@+id/user_home_btns_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/user_home_all_btn"
            android:backgroundTint="@color/lightPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="All"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="15dp"/>

        <Button
            android:id="@+id/user_home_attending_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGrey"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Attendee"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/user_home_organizing_btn"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/lightGrey"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_height="wrap_content"
            android:text="Organizer"/>

    </LinearLayout>

    <!-- RecyclerView below the three buttons -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_home_all_events_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:layout_below="@id/user_home_btns_ll"
        android:layout_above="@id/user_home_bnv"
        android:scrollbarThumbVertical="@android:color/darker_gray"/>

    <!-- Bottom Navigation View at the bottom -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_home_bnv"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_background"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:elevation="2dp"
        app:menu="@menu/bottom_menu"
        app:itemIconSize="30dp"
        app:itemTextColor="@drawable/item_selector"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
        app:labelVisibilityMode="unlabeled"/>

    <!-- Add button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/user_home_add_event_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_home_bnv"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/lightPink"
        android:clickable="true"

        app:srcCompat="@android:drawable/ic_input_add" />

</RelativeLayout>
