<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/view_event_sv"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
...
            android:fontFamily="sans-serif-condensed"
            android:text="@string/promotional_code"
            android:layout_below="@id/view_event_QR_iv"
            android:layout_marginTop="20dp" />

        <ImageView
            android:id="@+id/view_event_share_QR_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_event_share_qr_code_tv"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/event_qr_code"
            android:layout_marginTop="20dp" />
...
